[gd_scene load_steps=6 format=3 uid="uid://cdalvnkhgycsx"]

[ext_resource type="Theme" uid="uid://d1khvlrbvvmhv" path="res://themes/selec_level.tres" id="1_eivik"]
[ext_resource type="Script" uid="uid://bxi12t6vb8mv6" path="res://Juego/interfaz_menu_seleccion_niveles.gd" id="1_ja56r"]
[ext_resource type="Texture2D" uid="uid://d2ujgnlgjwrji" path="res://imgs/fondos/cueva.jpg" id="2_t4rpl"]
[ext_resource type="PackedScene" uid="uid://b3tvg00qookio" path="res://botones/settings_button.tscn" id="4_bakpf"]
[ext_resource type="PackedScene" uid="uid://clipsvwuhf6tm" path="res://botones/home_button.tscn" id="4_t4rpl"]

[node name="Interfaz_menu_seleccion_niveles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ja56r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t4rpl")

[node name="MarginLevels" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -855.0
offset_top = -245.5
offset_right = 855.0
offset_bottom = 245.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eivik")
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150

[node name="VLevels" type="VBoxContainer" parent="MarginLevels"]
layout_mode = 2

[node name="HLevels" type="HBoxContainer" parent="MarginLevels/VLevels"]
layout_mode = 2
theme_override_constants/separation = 300
alignment = 1

[node name="Level1" type="Button" parent="MarginLevels/VLevels/HLevels"]
layout_mode = 2
text = "Level 1"

[node name="Level2" type="Button" parent="MarginLevels/VLevels/HLevels"]
layout_mode = 2
text = "Level 2"

[node name="Level3" type="Button" parent="MarginLevels/VLevels/HLevels"]
layout_mode = 2
text = "Level 3"

[node name="Hbuttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 31.0
offset_right = -25.0
offset_bottom = 103.0
grow_horizontal = 0
theme_override_constants/separation = 15

[node name="home_button" parent="Hbuttons" instance=ExtResource("4_t4rpl")]
layout_mode = 2

[node name="settings_button" parent="Hbuttons" instance=ExtResource("4_bakpf")]
layout_mode = 2

[connection signal="pressed" from="MarginLevels/VLevels/HLevels/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginLevels/VLevels/HLevels/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginLevels/VLevels/HLevels/Level3" to="." method="_on_level_3_pressed"]
